--- a/src/gc-common/gc-config.html
+++ b/src/gc-common/gc-config.html
@@ -1,7 +1,7 @@
-<link rel="import" href="../../bower_components/polymer/polymer.html">
+<link rel="import" href="../../bower_components/polymer/polymer-element.html">
+
 <dom-module id="gc-config">
   <script>
-  (() => {
     let config = {
       api: {
         'localhost:8080': 'https://api.dev.gitcheese.com/v1',
@@ -24,11 +24,9 @@
         }
       }
     };
-    class GcConfig {
-      get is() {
-        return 'gc-config';
-      }
-      get properties() {
+    class GcConfig extends Polymer.Element {
+      static get is() { return 'gc-config'; }
+      static get properties() {
         return {
           apiUri: {
             type: String,
@@ -53,7 +51,7 @@
         };
       }
     }
-    Polymer(GcConfig);
-  })();
+
+    window.customElements.define(GcConfig.is, GcConfig);
   </script>
 </dom-module>
