--- a/src/gc-dashboard/gc-dashboard-fragment.html
+++ b/src/gc-dashboard/gc-dashboard-fragment.html
@@ -1,46 +1,36 @@
-<link rel="import" href="../../bower_components/polymer/polymer.html">
+<link rel="import" href="../../bower_components/polymer/polymer-element.html">
 <link rel="import" href="../../bower_components/app-active-route/app-active-route.html">
+<link rel="import" href="../gc-styles/gc-styles.html">
 <link rel="import" href="../gc-layouts/gc-app-fragment-layout.html">
-<link rel="import" href="../gc-common/gc-shell-behavior.html">
+<link rel="import" href="../gc-common/gc-fragment.html">
 <link rel="import" href="../gc-dashboard/gc-repos.html">
 
-<dom-module id="gc-dashboard-shell">
+<dom-module id="gc-dashboard-fragment">
   <template>
-    <style include="shared-styles"></style>
-
+    <style include="gc-styles"></style>
     <app-active-route pattern="{{activePattern}}" fallback-pattern="/">
       <app-route route="{{route}}" pattern="/repos/:id" data="{{repoData}}" tail="{{repoTail}}"></app-route>
     </app-active-route>
     <iron-pages selected="[[activePattern]]" attr-for-selected="for-pattern" selected-attribute="active">
       <gc-app-fragment-layout for-pattern="/" title="Repositories" burger-button>
-        <gc-repos id="repos"></gc-repos>
+        <gc-repos slot="layout-content" id="repos"></gc-repos>
       </gc-app-fragment-layout>
-      <gc-repo-shell for-pattern="/repos/:id" repo-id="[[repoData.id]]" route="[[repoTail]]"></gc-repo-shell>
+      <gc-repo-fragment for-pattern="/repos/:id" repo-id="[[repoData.id]]" route="[[repoTail]]"></gc-repo-fragment>
     </iron-pages>
-
   </template>
   <script>
-  (() => {
-    'use strict';
-    class GcDashboardShell {
-      get is() {
-        return 'gc-dashboard-shell';
-      }
-      get behaviors() {
-        return [
-          ...GitcheeseBehaviors.ShellBehavior
-        ];
-      }
+    class GcDashboardFragment extends GcFragment {
+      static get is() { return 'gc-dashboard-fragment'; }
       get lazyComponents() {
         return [
-          '../gc-repo/gc-repo-shell.html'
+          '../gc-repo/gc-repo-fragment.html'
         ];
       }
       activated() {
         this.$.repos.loadData();
       }
     }
-    Polymer(GcDashboardShell);
-  })();
+
+    window.customElements.define(GcDashboardFragment.is, GcDashboardFragment);
   </script>
 </dom-module>
