--- a/src/gc-user/gc-user-managed-accounts-terms-of-service-info.html
+++ b/src/gc-user/gc-user-managed-accounts-terms-of-service-info.html
@@ -1,16 +1,16 @@
-<link rel="import" href="../../bower_components/polymer/polymer.html">
+<link rel="import" href="../../bower_components/polymer/polymer-element.html">
 <link rel="import" href="../../bower_components/iron-collapse/iron-collapse.html">
 <link rel="import" href="../../bower_components/iron-icon/iron-icon.html">
 <link rel="import" href="../../bower_components/iron-icons/iron-icons.html">
 <link rel="import" href="../../bower_components/paper-icon-button/paper-icon-button.html">
 <link rel="import" href="../../bower_components/paper-toast/paper-toast.html">
-<link rel="import" href="../gc-styles/gc-shared-styles.html">
+<link rel="import" href="../gc-styles/gc-styles.html">
 <link rel="import" href="../gc-common/gc-api-ajax.html">
-<link rel="import" href="../gc-user/gc-user-managed-accounts-info-behavior.html">
+<link rel="import" href="../gc-user/gc-user-managed-accounts-info.html">
 
 <dom-module id="gc-user-managed-accounts-terms-of-service-info">
   <template>
-    <style include="shared-styles"></style>
+    <style include="gc-styles"></style>
     <style>
     :host {
       cursor: pointer;
@@ -33,25 +33,17 @@
       </template>
       <template is="dom-if" if="[[fieldsMissing]]">
         <i>Payment processing services on Gitcheese are provided by Stripe and are subject to the Stripe Connected Account Agreement, which includes the Stripe Terms of Service (collectively, the “Stripe Services Agreement”). By agreeing to these terms or continuing to operate as a user on Gitcheese, you agree to be bound by the Stripe Services Agreement, as the same may be modified by Stripe from time to time. As a condition of Gitcheese enabling payment processing services through Stripe, you agree to provide Gitcheese accurate and complete information about you and your business.</i>
-        <div actions>
+        <div class="action-buttons">
           <paper-button on-tap="_submit">accept</paper-button>
         </div>
       </template>
     </iron-collapse>
   </template>
   <script>
-  (() => {
-    'use strict';
-    class GcUserManagedAccountsTermsOfServiceInfo {
-      get is() {
-        return 'gc-user-managed-accounts-terms-of-service-info';
-      }
-      get behaviors() {
-        return [
-          GitcheeseBehaviors.UserManagedAccountsInfoBehavior
-        ];
-      }
+    class GcUserManagedAccountsTermsOfServiceInfo extends UserManagedAccountsInfo {
+      static get is() { return 'gc-user-managed-accounts-terms-of-service-info'; }
       ready() {
+        super.ready();
         this.fields.push('tos_acceptance.date',
           'tos_acceptance.ip');
       }
@@ -59,7 +51,7 @@
         this.$.put.generateRequest();
       }
     }
-    new Polymer(GcUserManagedAccountsTermsOfServiceInfo);
-  })();
+
+    window.customElements.define(GcUserManagedAccountsTermsOfServiceInfo.is, GcUserManagedAccountsTermsOfServiceInfo);
   </script>
 </dom-module>
